--- a/web/index.html
+++ b/web/index.html
@@ -5,9 +5,10 @@
     <meta charset="utf-8" />
     <title>bevy_quickstart</title>
     <link data-trunk rel="copy-dir" href="../assets" />
-    <!-- <link data-trunk rel="inline" href="style.css" /> -->
+    <link data-trunk rel="inline" href="style.css" />
     <!-- <link data-trunk rel="inline" type="module" href="restart-audio-context.js" /> -->
-    <link data-trunk rel="rust" data-cargo-no-default-features data-wasm-opt="s" href="../" />
+    <!-- <link data-trunk rel="rust" data-cargo-no-default-features data-wasm-opt="s" href="../" /> -->
+    <link data-trunk rel="rust" data-wasm-opt="s" href="../" />
 </head>
 
 <body>
